--- a/vild_ui.ipynb
+++ b/vild_ui.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /var/folders/fc/n5827zt91vb65jnqcsgpv5cr0000gn/T/ipykernel_28283/115418724.py:256: load (from tensorflow.python.saved_model.loader_impl) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /var/folders/fc/n5827zt91vb65jnqcsgpv5cr0000gn/T/ipykernel_14419/737780644.py:256: load (from tensorflow.python.saved_model.loader_impl) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "This function will only be available through the v1 compatibility library as tf.compat.v1.saved_model.loader.load or tf.compat.v1.saved_model.load. There will be a new function for importing SavedModels in Tensorflow 2.0.\n"
      ]
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-16 18:21:23.310371: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-07-18 21:38:19.428500: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -33,7 +33,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-16 18:21:25.542536: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:354] MLIR V1 optimization pass is not enabled\n"
+      "2022-07-18 21:38:22.695542: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:354] MLIR V1 optimization pass is not enabled\n"
      ]
     }
    ],
@@ -381,7 +381,7 @@
     "                               color='red', thickness=4,\n",
     "                               display_str_list=(),\n",
     "                               use_normalized_coordinates=True,user=0,):\n",
-    "  if user==2:\n",
+    "  if user==2 or user==3:\n",
     "    return\n",
     "  \n",
     "  draw = ImageDraw.Draw(image)\n",
@@ -472,6 +472,8 @@
     "#@ classes: numpy array [N]. Note that class indices are 1-based and match the keys in the label map.\n",
     "#@ scores: numpy array [N] or None(assumes plotted boxes are groundtruth boxes. Plot all boxes as black without classes/scores)\n",
     "#@ category_index: a dict [[category index `id`, category name `name`] keyed by category indices]\n",
+    "global scores_all\n",
+    "global indices_fg\n",
     "def visualize_boxes_and_labels_on_image_array(image, boxes, classes, scores, category_index,user,\n",
     "                                              instance_masks=None, instance_boundaries=None,\n",
     "                                              use_normalized_coordinates=False,\n",
@@ -493,10 +495,13 @@
     "  if not max_boxes_to_draw:\n",
     "    max_boxes_to_draw = boxes.shape[0]\n",
     "\n",
+    "  #//print(scores)\n",
     "  #//print(\"boxes.shape: \", boxes.shape[0])\n",
     "  for i in range(min(max_boxes_to_draw, boxes.shape[0])):\n",
+    "    print(i)\n",
     "    if scores is None or scores[i] > min_score_thresh:\n",
     "      box = tuple(boxes[i].tolist())\n",
+    "      \n",
     "      if instance_masks is not None:\n",
     "        box_to_instance_masks_map[box] = instance_masks[i]\n",
     "      if instance_boundaries is not None:\n",
@@ -508,23 +513,31 @@
     "        display_str = ''\n",
     "        if not skip_labels:\n",
     "          if not agnostic_mode:\n",
+    "            #print(scores_all[i])\n",
+    "            #print(category_indices[np.argmax(scores_all[i])])\n",
+    "            #print(category_indices)\n",
+    "            #//class_name = category_index[np.argmax(scores_all[classes[i]])]['name']k\n",
+    "            #//print(\"the number is: \", classes[i], \"\\n\",\"the possibility is: \", scores_all[classes[i]])\n",
+    "            class_name = category_index[np.argmax(scores_all[indices_fg[i]])]['name']\n",
     "            #print(list(category_index.keys()))\n",
-    "            if classes[i] in list(category_index.keys()):\n",
+    "            #if classes[i] in list(category_index.keys()):\n",
     "              #print(classes[i])\n",
-    "              class_name = category_index[classes[i]]['name']\n",
+    "              #!class_name = category_index[classes[i]]['name']\n",
     "              #print(class_name)\n",
-    "            else:\n",
-    "              class_name = 'N/A'\n",
+    "            #else:\n",
+    "            #  class_name = 'N/A'\n",
     "            display_str = str(class_name)\n",
     "            #print(display_str)\n",
     "            \n",
     "        ## SKIP_LABELS IF ENDING\n",
     "        if not skip_scores:\n",
-    "          if not display_str:\n",
-    "            display_str = '{}%'.format(int(100*scores[i]))\n",
-    "          else:\n",
-    "            float_score = (\"%.2f\" % scores[i]).lstrip('0')\n",
-    "            display_str = '{}: {}'.format(display_str, float_score)\n",
+    "          #if not display_str:\n",
+    "          #  display_str = '{}%'.format(int(100*scores[i]))\n",
+    "          #else:\n",
+    "          #  float_score = (\"%.2f\" % scores[i]).lstrip('0')\n",
+    "          #  display_str = '{}: {}'.format(display_str, float_score)\n",
+    "          float_score = (\"%.2f\" % float(np.max(scores_all[indices_fg[i]])*100))\n",
+    "          display_str = '{}: {}%'.format(display_str, float_score)\n",
     "          box_to_score_map[box] = int(100*scores[i])\n",
     "          \n",
     "        ## SKIP_SCORES IF ENDING \n",
@@ -567,6 +580,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.37559953, 0.32875124],\n",
+       "       [0.2853251 , 0.2450394 ],\n",
+       "       [0.24868415, 0.21461299],\n",
+       "       [0.27040896, 0.22903839],\n",
+       "       [0.25045556, 0.23159668],\n",
+       "       [0.24574862, 0.2140573 ],\n",
+       "       [0.36556888, 0.31986576],\n",
+       "       [0.23596096, 0.23321402],\n",
+       "       [0.26907587, 0.23978895],\n",
+       "       [0.275301  , 0.24211088],\n",
+       "       [0.32001954, 0.2866404 ],\n",
+       "       [0.23780736, 0.2143878 ],\n",
+       "       [0.2884213 , 0.26526436],\n",
+       "       [0.23272376, 0.21258655],\n",
+       "       [0.36639145, 0.3003508 ],\n",
+       "       [0.26842093, 0.22223848],\n",
+       "       [0.25790298, 0.20088194],\n",
+       "       [0.24730152, 0.21247607],\n",
+       "       [0.23920766, 0.20116681],\n",
+       "       [0.23907755, 0.22857589],\n",
+       "       [0.29997778, 0.25150838],\n",
+       "       [0.25656635, 0.22271009],\n",
+       "       [0.25664788, 0.22105701],\n",
+       "       [0.25040177, 0.21729903],\n",
+       "       [0.2563432 , 0.2264043 ],\n",
+       "       [0.31292802, 0.28262672],\n",
+       "       [0.24536589, 0.2183201 ],\n",
+       "       [0.26398167, 0.22470008],\n",
+       "       [0.25014472, 0.22210796],\n",
+       "       [0.30146694, 0.27224702],\n",
+       "       [0.26527146, 0.22620358],\n",
+       "       [0.27777702, 0.2553395 ],\n",
+       "       [0.32373273, 0.29797027],\n",
+       "       [0.246977  , 0.20709546],\n",
+       "       [0.2415064 , 0.22416472],\n",
+       "       [0.27542347, 0.25856218],\n",
+       "       [0.28863138, 0.252978  ],\n",
+       "       [0.23566464, 0.22123319],\n",
+       "       [0.31215316, 0.2759204 ],\n",
+       "       [0.25824285, 0.24014679],\n",
+       "       [0.230925  , 0.24098752],\n",
+       "       [0.25297844, 0.22862007],\n",
+       "       [0.30216444, 0.27089512],\n",
+       "       [0.24065997, 0.22868383],\n",
+       "       [0.26732856, 0.23919103],\n",
+       "       [0.24176158, 0.22788683],\n",
+       "       [0.2443342 , 0.22015962],\n",
+       "       [0.3083591 , 0.26322263],\n",
+       "       [0.2510603 , 0.21336843],\n",
+       "       [0.2779586 , 0.24058491]], dtype=float32)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@parameter debug\n",
+    "#@indices #array([ 0, 14,  6, 32, 10, 25, 38, 47, 42, 29, 20, 36, 12,  1, 49, 31, 35,\n",
+    "          #9,  3,  8, 15, 44, 30, 27, 39, 16, 22, 21, 24, 41, 48,  4, 23, 28,\n",
+    "          #2, 17, 33,  5, 26, 46, 45, 34, 40, 43, 18, 19, 11,  7, 37, 13])\n",
+    "#@indices_fg #array([40])\n",
+    "#@valid_indices[:max_boxes_to_draw] #array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+    "                                    #17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
+    "                                    #34, 35, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -575,6 +673,234 @@
      "output_type": "stream",
      "text": [
       "START UI\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-07-18 21:39:51.076 python[14419:314224] TSM AdjustCapsLockLEDForKeyTransitionHandling - _ISSetPhysicalKeyboardCapsLockLED Inhibit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "person;car\n",
+      "START DETECTING!\n",
+      "Valid Indices Cnt:  254\n",
+      "Building text embeddings...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:08<00:00,  2.94s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "Update Detection Window\n",
+      "car;person\n",
+      "START DETECTING!\n",
+      "Valid Indices Cnt:  254\n",
+      "Building text embeddings...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:08<00:00,  2.86s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "Update Detection Window\n",
+      "car;person\n",
+      "START DETECTING!\n",
+      "Valid Indices Cnt:  254\n",
+      "Building text embeddings...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:08<00:00,  2.73s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "Update Detection Window\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "car\n",
+      "START DETECTING!\n",
+      "Valid Indices Cnt:  254\n",
+      "Building text embeddings...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:05<00:00,  2.70s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "Update Detection Window\n"
      ]
     }
    ],
@@ -670,8 +996,8 @@
     "    global min_rpn_score_thresh     ########\n",
     "    min_rpn_score_thresh = 0.9\n",
     "    min_box_area = 220\n",
-    "    category_names = [x.strip() for x in self.category_name_string.split(';')] + ['background']\n",
-    "    categories = [{'name': item, 'id': idx+1,} for idx, item in enumerate(category_names)]\n",
+    "    category_names = ['background']+[x.strip() for x in self.category_name_string.split(';')]\n",
+    "    categories = [{'name': item, 'id': idx,} for idx, item in enumerate(category_names)]\n",
     "    global category_indices         ########\n",
     "    category_indices = {cat['id']: cat for cat in categories} \n",
     "    \n",
@@ -729,11 +1055,14 @@
     "      scores_all = softmax(FLAGS.temperature * raw_scores, axis=-1)\n",
     "    else:\n",
     "      scores_all = raw_scores\n",
+    "    #//print(scores_all.shape)\n",
     "    #* RANK\n",
     "    global indices                  ########\n",
     "    indices = np.argsort(-np.max(scores_all, axis=1))\n",
     "    global indices_fg               ########\n",
     "    indices_fg = np.array([i for i in indices if np.argmax(scores_all[i]) != 0])  \n",
+    "    global indices_fg_2\n",
+    "    indices_fg_2 = np.intersect1d(indices_fg, valid_indices)\n",
     "    \n",
     "    ymin, xmin, ymax, xmax = np.split(rescaled_detection_boxes, 4, axis=-1)\n",
     "    processed_boxes = np.concatenate([xmin, ymin, xmax - xmin, ymax - ymin], axis=-1)\n",
@@ -741,6 +1070,10 @@
     "    segmentations = paste_instance_masks(detection_masks, processed_boxes, image_height, image_width) \n",
     "    \n",
     "    if len(indices_fg) == 0:\n",
+    "      self.mgb_no = QMessageBox(self)\n",
+    "      self.mgb_no.setIcon(QMessageBox.Information)\n",
+    "      self.mgb_no.setText(\"ViLD does not detect anything belong to the given category\")\n",
+    "      self.mgb_no.show()\n",
     "      print('ViLD does not detect anything belong to the given category')\n",
     "    else:\n",
     "      image_with_detections = visualize_boxes_and_labels_on_image_array( \\\n",
@@ -808,6 +1141,7 @@
     "    global scores_all               ########\n",
     "    global isSaved                  ########\n",
     "    for anno_idx in indices[0:int(n_boxes)]:\n",
+    "      print(rescaled_detection_boxes)\n",
     "      rpn_score = detection_roi_scores[anno_idx]\n",
     "      bbox = rescaled_detection_boxes[anno_idx]  ## Get BBox\n",
     "      scores = scores_all[anno_idx]\n",
@@ -815,14 +1149,14 @@
     "      \n",
     "      if np.argmax(scores) == 0:\n",
     "        continue\n",
-    "      if showOrNot==2: # if showOrNot==0 or showOrNot==2:\n",
+    "      if showOrNot==2 or showOrNot==3: # if showOrNot==0 or showOrNot==2:\n",
     "        continue\n",
     "      \n",
     "      y1, x1, y2, x2 = int(np.floor(bbox[0])), int(np.floor(bbox[1])), int(np.ceil(bbox[2])), int(np.ceil(bbox[3]))\n",
     "      img_w_mask = plot_mask(mask_color, alpha, raw_image, segmentations[anno_idx])\n",
     "      crop_w_mask = img_w_mask[y1:y2, x1:x2, :]\n",
     "      \n",
-    "      category_names = [x.strip() for x in self.category_name_string.split(';')] + ['background']\n",
+    "      category_names = ['background']+[x.strip() for x in self.category_name_string.split(';')] \n",
     "      fig_size_h = min(max(5, int(len(category_names)/2.5)), 10)\n",
     "      fig, axs = plt.subplots(\n",
     "        1, 4, figsize=(fig_size_w, fig_size_h),\n",
@@ -841,6 +1175,7 @@
     "      axs[1].set_xticks([])\n",
     "      axs[1].set_yticks([])\n",
     "      axs[1].set_title(f'predicted: {category_names[np.argmax(scores)]}')\n",
+    "      showLabel = category_names[np.argmax(scores)]\n",
     "      axs[1].imshow(crop)\n",
     "      #@ Draw segmentation inside a cropped region.\n",
     "      axs[2].set_xticks([])\n",
@@ -953,18 +1288,19 @@
     "      #//print(self.index)\n",
     "      ymin, xmin, ymax, xmax = rescaled_detection_boxes[self.index]\n",
     "      #//print(ymin, xmin, ymax, xmax)\n",
-    "      if self.x0 < xmax and self.x0 > xmin and self.y0 < ymax and self.y0 > ymin:\n",
+    "      if self.x0 < xmax and self.x0 > xmin and self.y0 < ymax and self.y0 > ymin and isSaved[self.index]!=3:\n",
     "        self.cb = QComboBox(self)\n",
     "        self.cb.move(self.x0, self.y0)\n",
     "        self.cb.addItem('This bbox is selected')\n",
     "        self.cb.addItem(QtGui.QIcon(\"./icon/icons8-assessments-90.png\"),'Get its results')\n",
     "        self.cb.addItem(QtGui.QIcon(\"./icon/icons8-multiplication-90.png\"),'Discard it')\n",
+    "        self.cb.addItem(QtGui.QIcon(\"./icon/icons8-garbage-66.png\"),'Discard it FOREVER')\n",
     "        self.cb.setCurrentIndex(0)\n",
     "        \n",
     "        self.cb.currentIndexChanged[str].connect(self.oper)\n",
     "        self.cb.show()\n",
     "        break\n",
-    "        \n",
+    "      \n",
     "  def oper(self, choice):\n",
     "    global image                    ########\n",
     "    global valid_indices            ########\n",
@@ -991,6 +1327,14 @@
     "      self.mgb.setIcon(QMessageBox.Warning)\n",
     "      self.mgb.setText(\"You would ignore this bbox!\")\n",
     "      self.mgb.setInformativeText(\"Later, it will not be saved\")\n",
+    "      self.mgb.show()\n",
+    "    \n",
+    "    elif choice == \"Discard it FOREVER\":\n",
+    "      isSaved[self.index] = 3\n",
+    "      self.mgb = QMessageBox(self)\n",
+    "      self.mgb.setIcon(QMessageBox.Warning)\n",
+    "      self.mgb.setText(\"Discard FOREVER\")\n",
+    "      self.mgb.setInformativeText(\"CANNOT RECOVER!\")\n",
     "      self.mgb.show()\n",
     "      \n",
     "    self.cb.deleteLater()\n",
