--- a/vild_ui.ipynb
+++ b/vild_ui.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,69 +10,6 @@
      "output_type": "stream",
      "text": [
       "START UI\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-07-20 23:30:07.516 python[8442:141932] TSM AdjustCapsLockLEDForKeyTransitionHandling - _ISSetPhysicalKeyboardCapsLockLED Inhibit\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "koala\n",
-      "START DETECTING!\n",
-      "Building text embeddings...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2/2 [00:03<00:00,  1.82s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Users/gsq/Desktop/zero_shot_lab/zero_shot_object_detection/visual_encoder.py:10: load (from tensorflow.python.saved_model.loader_impl) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "This function will only be available through the v1 compatibility library as tf.compat.v1.saved_model.loader.load or tf.compat.v1.saved_model.load. There will be a new function for importing SavedModels in Tensorflow 2.0.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "2022-07-20 23:30:19.546909: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from ./image_path_v2/variables/variables\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-07-20 23:30:21.786300: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:354] MLIR V1 optimization pass is not enabled\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of valid indices 394\n",
-      "Update Detection Window\n"
      ]
     }
    ],
@@ -106,7 +43,7 @@
     "class firstWindow(QWidget):\n",
     "  def __init__(self, *args, **kwargs):\n",
     "    super(firstWindow, self).__init__(*args, **kwargs)\n",
-    "    self.image_path = CONFIG.image_path\n",
+    "    self.image_path = './examples/test.jpg'\n",
     "    self.setWindowTitle('Detect objects. Please input custom labels.')\n",
     "    self.currentText = \"\"\n",
     "    self.bboxMax = CONFIG.max_boxes_to_draw\n",
@@ -293,8 +230,9 @@
     "      print(\"NO IMAGE CHOSEN!\")\n",
     "      return\n",
     "    print(\"New Iamge: \", image_choose, \"\\n\")\n",
-    "    image_choose = image_choose.split('/')[-1]\n",
-    "    self.image_path = './examples/'+ image_choose\n",
+    "    self.image_path = image_choose\n",
+    "    #//image_choose = image_choose.split('/')[-1]\n",
+    "    #//self.image_path = './examples/'+ image_choose\n",
     "    \n",
     "    with open(\"./config/demo.yaml\") as f:\n",
     "        doc = yaml.safe_load(f)\n",
@@ -406,13 +344,18 @@
     "    super(customInputLabel, self).__init__((parent))\n",
     "    self.parentWindow = parent\n",
     "    \n",
-    "    re = QRegExp('[a-zA-Z,]+$')\n",
+    "    re = QRegExp('[a-zA-Z, ]+$')\n",
     "    re_validato = QRegExpValidator(re)\n",
     "    self.setValidator(re_validato)\n",
     "    self.move(self.parentWindow.lb_0.x()+50, self.parentWindow.lb_0.y()+20)\n",
     "    self.resize(510, 20)\n",
-    "    self.setText(\"Please input your custom label(s) to Zero-shot Detect! [separated by',']\")\n",
+    "    self.setPlaceholderText(\"Please input your custom label(s) to Zero-shot Detect! [separated by',']\")\n",
+    "    #self.setText(\"Please input your custom label(s) to Zero-shot Detect! [separated by',']\")\n",
     "    self.textChanged.connect(self.parentWindow.textchange) \n",
+    "    \n",
+    "    def mousePressEvent(self, event):\n",
+    "      if event.buttons () == QtCore.Qt.LeftButton:\n",
+    "        self.setFocus()\n",
     "    \n",
     "class bboxInputLabel(QLineEdit):\n",
     "  def __init__(self, parent=None):\n",
@@ -423,7 +366,8 @@
     "    self.setValidator(re_validato)\n",
     "    self.move(self.parentWindow.lb_0.x()+50, self.parentWindow.lb_0.y()+45)\n",
     "    self.resize(160, 20)\n",
-    "    self.setText(\"Max bbox numbers:\")\n",
+    "    self.setPlaceholderText(\"Max bbox numbers: \")\n",
+    "    #self.setText(\"Max bbox numbers:\")\n",
     "    self.textChanged.connect(self.parentWindow.numchange)   \n",
     "    \n",
     "    \n",
@@ -476,9 +420,9 @@
     "      if self.x0 < xmax and self.x0 > xmin and self.y0 < ymax and self.y0 > ymin and isSaved[self.index]!=3:\n",
     "        self.cb = QComboBox(self)\n",
     "        self.cb.move(self.x0, self.y0)\n",
-    "        self.cb.addItem('This bbox is selected')\n",
-    "        self.cb.addItem(QtGui.QIcon(\"./icon/icons8-assessments-90.png\"),'Get its results')\n",
-    "        self.cb.addItem(QtGui.QIcon(\"./icon/icons8-multiplication-90.png\"),'Discard it')\n",
+    "        self.cb.addItem('Accept or Reject this result')\n",
+    "        self.cb.addItem(QtGui.QIcon(\"./icon/icons8-assessments-90.png\"),'Accept')\n",
+    "        self.cb.addItem(QtGui.QIcon(\"./icon/icons8-multiplication-90.png\"),'Reject')\n",
     "        self.cb.addItem(QtGui.QIcon(\"./icon/icons8-garbage-66.png\"),'Discard it FOREVER')\n",
     "        self.cb.setCurrentIndex(0)\n",
     "        \n",
@@ -495,22 +439,23 @@
     "    global segmentations            ########\n",
     "    global min_rpn_score_thresh     ########\n",
     "    #//print(i)\n",
-    "    if choice == \"Get its results\":\n",
+    "    if choice == \"Accept\":\n",
     "      #//print(self.index)\n",
     "      # Global Variable\n",
     "      isSaved[self.index] = 1\n",
     "      self.mgb = QMessageBox(self)\n",
     "      self.mgb.setIcon(QMessageBox.Information)\n",
-    "      self.mgb.setText(\"You have saved the detection result.\")\n",
+    "      self.mgb.setText(\"This result has been saved\")\n",
+    "      self.mgb.setInformativeText(\"The result directory would be flushed each time\")\n",
     "      self.mgb.show()\n",
     "      \n",
-    "    elif choice == \"Discard it\":\n",
+    "    elif choice == \"Reject\":\n",
     "      #//print(self.index)\n",
     "      # Global Variable\n",
     "      isSaved[self.index] = 2\n",
     "      self.mgb = QMessageBox(self)\n",
     "      self.mgb.setIcon(QMessageBox.Warning)\n",
-    "      self.mgb.setText(\"You would ignore this bbox!\")\n",
+    "      self.mgb.setText(\"This result has been discarded\")\n",
     "      self.mgb.setInformativeText(\"Later, it will not be saved\")\n",
     "      self.mgb.show()\n",
     "    \n",
