--- a/vild_ui.ipynb
+++ b/vild_ui.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
     "class firstWindow(QWidget):\n",
     "  def __init__(self, *args, **kwargs):\n",
     "    super(firstWindow, self).__init__(*args, **kwargs)\n",
-    "    self.image_path = './examples/test.jpg'\n",
+    "    self.image_path = CONFIG.image_path\n",
     "    self.setWindowTitle('Detect objects. Please input custom labels.')\n",
     "    self.currentText = \"\"\n",
     "    self.bboxMax = CONFIG.max_boxes_to_draw\n",
