added confidence threshhold to demo

--- a/vild_ui.ipynb
+++ b/vild_ui.ipynb
@@ -2,14 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "START UI\n"
+      "START UI\n",
+      "car;person;shoes\n",
+      "START DETECTING!\n",
+      "Building text embeddings...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████| 4/4 [00:16<00:00,  4.17s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/daynauth/ML/ViLD-Save-Model/visual_encoder.py:10: load (from tensorflow.python.saved_model.loader_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This function will only be available through the v1 compatibility library as tf.compat.v1.saved_model.loader.load or tf.compat.v1.saved_model.load. There will be a new function for importing SavedModels in Tensorflow 2.0.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "2022-07-25 17:07:34.028035: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./image_path_v2/variables/variables\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-07-25 17:07:35.773104: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:354] MLIR V1 optimization pass is not enabled\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of valid indices 394\n",
+      "Update Detection Window\n",
+      "car;person;shoes;bag;fire hydrant\n",
+      "START DETECTING!\n",
+      "Building text embeddings...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████| 6/6 [00:25<00:00,  4.19s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./image_path_v2/variables/variables\n"
      ]
     }
    ],
@@ -20,6 +87,7 @@
     "from util import *\n",
     "\n",
     "import os\n",
+    "import sys\n",
     "from easydict import EasyDict\n",
     "import yaml\n",
     "\n",
@@ -38,6 +106,8 @@
     "from PyQt5.QtWidgets import *\n",
     "import shutil\n",
     "\n",
+    "\n",
+    "\n",
     "print(\"START UI\")\n",
     "\n",
     "class firstWindow(QWidget):\n",
@@ -48,6 +118,7 @@
     "    self.currentText = \"\"\n",
     "    self.bboxMax = CONFIG.max_boxes_to_draw\n",
     "    self.category_name_string=\"\"\n",
+    "    self.conf_threshold = CONFIG.conf_threshold\n",
     "    \n",
     "    self.img = cv2.imread(self.image_path)\n",
     "    self.imageHeight, self.imageWidth, self.bytesPerComponent = self.img.shape\n",
@@ -168,10 +239,13 @@
     "\n",
     "    raw_scores = detection_visual_feat.dot(text_features.T)\n",
     "\n",
-    "    if CONFIG.use_softmax:\n",
-    "      scores_all = softmax(CONFIG.temperature * raw_scores, axis=-1)\n",
-    "    else:\n",
-    "      scores_all = raw_scores\n",
+    "#     if CONFIG.use_softmax:\n",
+    "#       scores_all = softmax(CONFIG.temperature * raw_scores, axis=-1)\n",
+    "#       print('Using Softmax')\n",
+    "#     else:\n",
+    "#       scores_all = raw_scores\n",
+    "\n",
+    "    scores_all = softmax(CONFIG.temperature * raw_scores, axis=-1)\n",
     "\n",
     "    global indices                 \n",
     "    global indices_fg \n",
@@ -202,7 +276,7 @@
     "        instance_masks=segmentations[indices_fg],\n",
     "        use_normalized_coordinates=False,\n",
     "        max_boxes_to_draw=max_boxes_to_draw, min_score_thresh=min_rpn_score_thresh,\n",
-    "        skip_scores=False, skip_labels=False,\n",
+    "        skip_scores=False, skip_labels=False, conf_threshold = CONFIG.conf_threshold\n",
     "      )\n",
     "      #//plt.imshow(image_with_detections)  \n",
     "      \n",
@@ -274,7 +348,12 @@
     "        continue\n",
     "      if showOrNot==2 or showOrNot==3: # if showOrNot==0 or showOrNot==2:\n",
     "        continue\n",
+    "        \n",
+    "      if(np.max(scores) < self.conf_threshold):\n",
+    "        continue\n",
     "      \n",
+    "      print(np.max(scores))\n",
+    "        \n",
     "      y1, x1, y2, x2 = int(np.floor(bbox[0])), int(np.floor(bbox[1])), int(np.ceil(bbox[2])), int(np.ceil(bbox[3]))\n",
     "      img_w_mask = plot_mask(mask_color, alpha, raw_image, segmentations[anno_idx])\n",
     "      crop_w_mask = img_w_mask[y1:y2, x1:x2, :]\n",
@@ -522,11 +601,25 @@
     "  CONFIG = EasyDict(CONFIG)\n",
     "main(CONFIG)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('zeroShot')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -542,10 +635,9 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "86c8192e3b52dd5b61cf7d633d9cde44ca62fe25113112c353ce106148b537f5"
+    "hash": "f7e7981c3f1d0bc131d2b62ad0de4151dd7bf01da693289da362b8c260d370bc"
    }
   }
  },
